Fixed layout issues

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -27,6 +27,7 @@
 	&__restaurant {
 		height: 70vh;
 		display: flex;
+		margin-top: 120px;
 
 		&-text {
 			padding: 20px;
