--- a/scss/_info.scss
+++ b/scss/_info.scss
@@ -6,7 +6,7 @@
 	display: flex;
 	justify-content: space-around;
 	color: white;
-	margin-top: 100px;
+	margin-top: 250px;
 
 	&__map {
 		display: flex;
