--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -6,6 +6,7 @@
 	line-height: 2.5;
 	font-family: caslon, Georgia, "Times New Roman", Times, serif;
 	position: relative;
+	margin-top: 100px;
 
 	&__heading {
 		text-align: center;
